new colors + links updates

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,6 @@
 /* couleur de la page */
 body, html {
   height: 100%;
-  @apply bg-gradient-to-r from-green-200 via-green-400 to-purple-700;
+  @apply bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900;
 }
 
